'Jakarta Server Pages' -> 'Jakarta Pages'

--- a/webapps/examples/jsp/index.html
+++ b/webapps/examples/jsp/index.html
@@ -29,7 +29,7 @@
 <h1>JSP
 Samples</h1>
 <p>This is a collection of samples demonstrating the usage of different
-parts of the Java Server Pages (JSP) specification.  Both JSP 2.0 and
+parts of the Jakarta Pages (JSP) specification.  Both JSP 2.0 and
 JSP 1.2 examples are presented below.
 <p>These examples will only work when these pages are being served by a
 servlet engine; of course, we recommend
