--- a/java/org/apache/tomcat/util/digester/package.html
+++ b/java/org/apache/tomcat/util/digester/package.html
@@ -867,8 +867,8 @@ There are many good regex libraries available. (For example
 <a href='https://jakarta.apache.org/oro/index.html'>Jakarta ORO</a>,
 <a href='https://jakarta.apache.org/regexp/index.html'>Jakarta Regex</a>,
 <a href='http://www.cacas.org/java/gnu/regexp/'>GNU Regex</a> and
-<a href='http://java.sun.com/j2se/1.4.2/docs/api/java/util/regex/package-summary.html'>
-Java 1.4 Regex</a>)
+<a href='https://docs.oracle.com/javase/8/docs/api/java/util/regex/package-summary.html'>
+Java Regex</a>)
 Not only do different people have different personal tastes when it comes to
 regular expression matching but these products all offer different functionality
 and different strengths.
