--- a/java/org/apache/tomcat/util/buf/package.html
+++ b/java/org/apache/tomcat/util/buf/package.html
@@ -26,12 +26,6 @@ B2C converters are caching an ISReader/OSWriter and keep everything allocated to
 in any VM without any garbage.
 
 <p>
-This package must accommodate future extensions and additional converters ( most important: the nio.charset,
-which should be detected and used if available ). Also, we do have one handwritten UTF8Decoder, and
-other tuned encoders could be added.
-
-<p>
-My benchmarks ( I'm costin :-) show only small differences between C2B, B2C and handwritten coders/decoders,
-so UTF8Decoder may be disabled.
+This package must accommodate future extensions and additional converters.
 
 </body></html>
